css/screen.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}


/* -- NORMALIZATION -- */
/* Minified this on https://cssminifier.com/ */
[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted .0625em}fieldset{border:.0625em solid silver;margin:0 .125em;padding:.35em .625em .75em}legend{color:inherit;display:table;max-width:100%;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-.125em}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
/* End normalize.css form styles */
/* stylelint-enable */


/* usage of imported font:
font-family: 'Open Sans Condensed', sans-serif;
*/


/* -- MODULAR SCALE -- */
/* MAJOR THIRD 4:5 
  BASE= 1.25em = 20px / 16px
  Line height  = 1.2em = 24px @ Base 
*/
  


/* BASE ----------------------- */
/* =============================================== */

html {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 1.2em;
  line-height: 1.2em;
  color: black;
  /*
  background-image: url(http://iit.edu/news/iittoday/wp-content/uploads/2012/11/campus_aerial_day.jpg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  */
}

body {
  opacity: 2;
  margin: 1em .5em 1em .5em;
  padding-bottom: 1em;
  border-style: solid;
  border-width: 4px;
}

h1 {
  font-size: 2.05em;
  line-height: 1.2em;
  text-align: center;
}

h2 {
  font-size: 2.441em;
  line-height: 1.253em;
}

form {
  padding: 0.5em 1.5em 0.5em 1em;
  /* Also controls empty area to be pushed down on page */
}

li {
  padding-bottom: .5em;
}

input {
  width: 100%;
  height: 2em;
}

label {
  padding: 0.3em 0.5em;
  color: rgb(0,0,0,0.64);
}

a {
  color: darkred;
}

#loginfooter {
  text-align: center;
  padding: 0em 0.2em 0.2em 0.2em;
}

#eye {
  position: relative;
  left: 82.5%;
  bottom: 1.8em;
}

td, th {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 8px;
}


/* LAYOUT/MODULAR -------------- */
/* =============================================== */
.contentLeft {
  float: none;
  text-align: center;
}

.contentRight {
  float: none;
  text-align: center;
}

#heading {
  text-align: center;
  background-color: rgba(127, 38, 38, .8);
  padding: .23em;
}

#user label,
#pass label {
  position: absolute;
}

#user label.gone,
#pass label.gone {
  left: -6000px;
}

#forgot {
  font-size: .8em;
  text-align: center;
}

#submitmain {
  border: solid;
  border-color: darkred;
}

#submitmain:hover {
  color:  #E6E6FA;
  border-color:  #E6E6FA;
  background-color: darkred;
}


/* NAVIGATION BAR */
nav button{
  margin: .5em;
  background-color: indianred;
  border-style: solid;
  border-width: 2px;
  border-color: darkred;
  
  margin-left: 35%;
  width: 30%;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 1.25em;
  padding: .4em;
}
nav:hover #accountTabs{
  display: block;
}
#accountTabs {
  display: none;
}

/* Gives a glow on the menu hover */
#tab:hover {
   text-shadow: 1px 1px 10px orange; 
}
#accountTabs li {
  text-align: center;
  
}

#accountTabs li a {
  /* Removes underline from links */
  text-decoration: none;
}



/* PAGE SPECIFIC CLASS CSS */
/* For if we want to do anything specific to one page */
/* LOGIN PAGE *********************************/
.loginPage {
  background-image: url(../media/iit-campus-1.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

.loginPage body {
  /*Opacity of background itself */
  background-color: rgba(245, 245, 245, 0.7);
  /*Opacity of content within body*/
  opacity: 1;
}

/* ACCOUNT PAGE *******************************/

.accountPage {
  background-color: darkred;
}
.accountPage body {
  background-color: #FDFDFD;
  
}

nav li {
  font-size: 1.2em;
}

.accountPage h2 {
  font-size: 1.7em;
}

.accountPage section {
  padding: 1.5em;
  margin: .3em .3em .3em .1em;
  border-width: 3px;
  border-style: solid;
  border-color: darkred;
  clear: both;
  height: auto;
  overflow: auto;
}

.accountPage figure img {
  max-width: 100%;
  max-height: 10em;
}

.accountPage footer {
  clear: both;
  text-align: center;
}

#confirmpay {
    display: none;
}

/* FINANCIAL PAGE *******************************/

.financialPage {
  background-color: darkred;
}

.financialPage body {
  background-color: #FDFDFD;
}

.financialPage section {
  padding: 1em 1em;
}

.financialPage th{
  text-align: center;
}
.financialPage .balanceInfo, .payment{
  border-style: solid;
  border-width: 3px;
  border-color: darkred;
  padding: 1em;
  margin-bottom: 2em;
}

.financialPage h1 {
  padding-bottom: 1em;
}
#submitpay  {
  color: white;
  width: 80%;
  margin-left: 10%;
  margin-top: 1em;
  background-color: mediumblue;
}

#confirmpay {
  color: white;
  width: 80%;
  margin-left: 10%;
  margin-top: 1em;
  background-color: mediumblue;
}

.step {
  font-size: 2em;
}
/* END OF PAGE SPECIFICS ************************/


/* STATE ----------------------- */
/* =============================================== */

/* Tablets */

@media (min-width: 700px) {
  body {
    margin-left: 3em;
    margin-right: 3em;
    padding-top: 1em;
  }
  /* Account Page */
  .loginPage body {
    margin: 2em 12em 2em 12em;
  }
  nav {
    text-align: center;
  }
  #accountTabs li {
    display: inline;
    list-style-type: none;
    padding-left: .1em;
    padding-right: .1em;
  }
  .financialPage .balanceInfo {
    margin: 1em 2em;
  }
  .financialPage .payment {
    margin: 1em 2em;
  }
  .financialPage section {
    padding: 1em 2em;
  }
  
  

  nav button {
    display: none;
  }

  #accountTabs {
    display: block;
  }


}


/* Desktop */
@media (min-width: 1024px) {
  
  #accountTabs li {
    padding-left: .2em;
    padding-right: .2em;
  }
  
  /* Login Page */
  .loginPage body {
    margin: 4em 19em 4em 19em;
  }

  /* Account Page */
  .accountPage body {
    margin: 1em 10em;
    padding: 1em 1em;
  }
  .accountPage #personalID, #publicSafety{
    padding-bottom: 1.53em;
  }
  .sectionLeft {
    float: left;
    width: 50%;
  }
  .sectionRight {
    float: right;
    width: 47%;
  }
  
  /* Financial Page */
  .financialPage body {
    margin: 1em 10em;
    padding: 1em 2em;
  }
  
  .financialPage .balanceInfo {
    margin: 1em 4em 3em 4em;
  }
  
  .financialPage .payment {
    margin: 1em 4em 3em 4em;
  }

}

